--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
 <head>
 
   <meta charset="utf-8">
@@ -46,7 +48,7 @@
   
 
     <div class="py-5 bg-image-full" style="height:50vh;background-image: url('banner.jpg');">
-      <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
+      <!-- sdsdPut anything you want here! There is just a spacer below for demo purposes! -->
     
     </div>
 
