--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 
 </head>
 
@@ -28,7 +28,7 @@
   <div class="container">
     <a href="#" class="navbar-brand">
       <!-- Logo Image -->
-      <img src="LOGO.png" width="45" alt="" class="d-inline-block align-middle mr-2">
+      <img src="Media/LOGO.png" width="45" alt="" class="d-inline-block align-middle mr-2">
       <!-- Logo Text -->
       <span class="text-uppercase font-weight-bold">UC Engineering Society</span>
     </a>
@@ -59,7 +59,7 @@
           <div class="sm-12 col-6">
     
               <a href="https://clubs.canberra.edu.au/Clubs/UCENGSOC?fbclid=IwAR3fKhnHeP_4F4gvjqjovf4ZL-mqWHJs3W0tSETIyUA6St_oN83QkMXNDdM">
-                <img class="imga" src="a2.jpg">
+                <img class="imga" src="media/a2.jpg">
                 <div class="carousel-caption">
                   <h1>Membership Signup</h1>
                 </div>
@@ -69,7 +69,7 @@
           <div class="sm-12 col-6">
 
               <a href="https://www.facebook.com/UCEngineeringSociety/">
-                <img class="imga" src="b.png">
+                <img class="imga" src="media/b.png">
               <div class="carousel-caption">
                 <h1>Facebook</h1>
               </div>
@@ -80,7 +80,7 @@
           <div class="sm-12 col-6">
 
               <a href="https://us20.campaign-archive.com/home/?u=60f6c4b2ae9c8a4ddeb51d6f6&id=10a2c58031">
-                <img class="imga" src="d2.png">
+                <img class="imga" src="media/d2.png">
               <div class="carousel-caption">
                 <h1>Newsletter</h1>
               </div>
@@ -89,7 +89,7 @@
           <div class="sm-12 col-6">
 
             <a href="https://discord.gg/yb3JmZ2">
-              <img class="imga" src="e2.png">
+              <img class="imga" src="media/e2.png">
             <div class="carousel-caption">
               <h1>Discord</h1>
             </div>
