Second commit here for monday

--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
   <!-- Page Content -->
   <div class="spec_back container-fluid">
     <div class="row">
-      <div class="col">
+      <div class="col-9">
         <h1 class="py-4"style="color:white; text-align:center;">Welcome to the UC Engineering Society</h1>
       </div>
       <div class="col">
-        <a class="blur href="https://www.facebook.com/UCEngineeringSociety/events/">
-          <div class="carousel-caption">
-            <h1>Events</h1>
+        <a href="https://www.facebook.com/UCEngineeringSociety/events/">
+          <!-- <i class=" blur imga" src="media/a2.jpg"> -->
+          <div style="background-color:rgb(60, 60, 155); border-radius: 20px;box-shadow:0px 0px 6px 4px gray" class="carousel-caption">
+            <h1 style="font-weight:300;">Events</h1>
           </div>
         </a>
+
         
       </div>
     </div>
@@ -122,6 +124,12 @@
   
   <!-- /.container -->
     <div class="py-5 container-sm">
+      <div style="background-color:white;"class="row">
+        <div class="col">
+          <h2 style="font-weight:600;color:rgb(7, 132, 250);text-align:center">About us</h2>
+        </div>
+      </div>
+  <hr>
       <div class="row">
         <div class="col">
           <p style="color:white; font-size:22px">The UC Engineering Society was founded in 2017 with the mission to teach beyond the standard 
@@ -140,7 +148,7 @@
           </p>
         </div>
       </div>
-      <div class="row">
+      <div class="py-5 row">
         <div class="col">
           <h3 style="color:white;">Some examples of events we’ve run in the past include:</h3>
           <ul style="color:white; font-size:22px">
@@ -154,7 +162,7 @@
           </ul>
         </div>
       </div>
-      <h1 style="color:white;"">ucengineeringsoc@gmail.com</h1>
+      <h1 style="color:white;""><span style="color:rgb(0, 153, 255)">Get in touch</span> - ucengineeringsoc@gmail.com</h1>
     </div>
   <!-- Footer -->
   <footer style="width:100vw" class="py-5 bg-dark">
