changed slack to Discord

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
           <div class="pt-4 col-sm-12 col-md-6 col-lg-6">
 
             <a href="https://chat.ucengsoc.com.au">
-              <img class="blur imga" src="media/slack3.png">
+              <img class="blur imga" src="media/discord.png">
             <div class="carousel-caption">
-              <h5 style="color:black ;drop-shadow:2px 2px 2px black; font-size:40px;">Slack</h5>
+              <h5 style="color:white;drop-shadow:2px 2px 2px black; font-size:40px;">Slack</h5>
             </div>
           </a>
           </div>
