Forgot to update name

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <a href="https://chat.ucengsoc.com.au">
               <img class="blur imga" src="media/discord.png">
             <div class="carousel-caption">
-              <h5 style="color:white;drop-shadow:2px 2px 2px black; font-size:40px;">Slack</h5>
+              <h5 style="color:white;drop-shadow:2px 2px 2px black; font-size:40px;">Discord</h5>
             </div>
           </a>
           </div>
